--- a/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
+++ b/frontend/src/app/plugins/text-plugin/admin/text-plugin-admin/text-plugin-admin.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="adminForm">
   <label for="text">Text</label>
-  <ckeditor id="text" [editor]="Editor" [data]="adminForm.get('text').value" (change)="onChange($event)"></ckeditor>
+  <ckeditor id="text" [editor]="Editor" [data]="settings.text" (change)="onChange($event)"></ckeditor>
 </form>
 
 
