Submenu for context menu

--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
@@ -1,4 +1,6 @@
 <div class="grid-stack-item-content">
-  <ng-container #itemTemplate></ng-container>
+  <div #gridContent>
+    <ng-container #itemTemplate></ng-container>
+  </div>
 </div>
 
