--- a/frontend/src/app/public/components/public-grid-item/public-grid-item.component.html
+++ b/frontend/src/app/public/components/public-grid-item/public-grid-item.component.html
@@ -1,4 +1,6 @@
 <div class="grid-stack-item-content">
-  <ng-container #container></ng-container>
+  <div #gridContent>
+    <ng-container #container></ng-container>
+  </div>
 </div>
 
