--- a/frontend/src/app/page/pages/page-builder/page-builder.component.html
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.html
@@ -4,6 +4,8 @@
     </button>
     <button class="save-builder ml-1" (click)="save()" mat-raised-button color="primary"><i class="material-icons">save</i>Uložit
     </button>
+    <button class="public-builder ml-1" (click)="save(true)" mat-raised-button color="primary"><i class="material-icons">public</i>Publikovat
+    </button>
   </div>
 </div>
 <div class="row">
