--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -30,8 +30,8 @@
   </div>
   <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
        aria-labelledby="custom-content-below-profile-tab">
-    <div class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolverMessenger of menuPluginResolverServices.abstractMenuPluginResolverMessenger" data-gs-width="1" data-gs-height="1">
-      <img appMenuPluginResolverDirective [abstractMenuPluginResolverMessenger] = "abstractMenuPluginResolverMessenger" [src]="abstractMenuPluginResolverMessenger.getMenuImage()">
+    <div class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolver of menuPluginResolverServices.abstractMenuPluginResolver" [attr.data-gs-width]="abstractMenuPluginResolver.gridWidth()" [attr.data-gs-height]="abstractMenuPluginResolver.gridHeight()">
+      <img appMenuPluginResolverDirective [abstractMenuPluginResolverMessenger] = "abstractMenuPluginResolver" src="{{abstractMenuPluginResolver.getMenuImage()}}">
     </div>
   </div>
 </div>
