Submenu for context menu

--- a/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
+++ b/frontend/src/app/page/components/palette-builder/page-block/palette-item-component/palette-item.component.html
@@ -1,4 +1,5 @@
 <div class="grid-stack-item-content">
+  <i class="material-icons icon-move">open_with</i>
   <div #gridContent>
     <ng-container #itemTemplate></ng-container>
   </div>
