--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -19,3 +19,24 @@
   width: 30%;
 }
 
+.grid-stack-item-menu {
+  position: relative;
+}
+
+i.icon-move{
+  position: absolute;
+  top: 10px;
+  color: red;
+  display: none;
+  left: 11px;
+  cursor: move;
+}
+
+.menu-image:hover + i.icon-move{
+  display: block;
+}
+
+i.icon-move:hover{
+  display: block;
+}
+
