--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.html
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.html
@@ -28,11 +28,12 @@
       </li>
     </ul>
   </div>
-  <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel"
-       aria-labelledby="custom-content-below-profile-tab">
+  <div class="tab-pane fade menu-element" id="custom-content-below-profile" role="tabpanel" aria-labelledby="custom-content-below-profile-tab">
     <div class="menu-element-item grid-stack-item-menu" *ngFor="let abstractMenuPluginResolver of menuPluginResolverServices.abstractMenuPluginResolver" [attr.data-gs-width]="abstractMenuPluginResolver.gridWidth()" [attr.data-gs-height]="abstractMenuPluginResolver.gridHeight()">
-      <img appMenuPluginResolverDirective [abstractMenuPluginResolverMessenger] = "abstractMenuPluginResolver" src="{{abstractMenuPluginResolver.getMenuImage()}}">
+        <img class="menu-image"  appMenuPluginResolverDirective [abstractMenuPluginResolverMessenger] = "abstractMenuPluginResolver" src="{{abstractMenuPluginResolver.getMenuImage()}}">
+        <i class="material-icons icon-move">open_with</i>
     </div>
+
   </div>
 </div>
 </div>
