--- a/frontend/src/app/page/components/menu-builder/menu-builder.component.css
+++ b/frontend/src/app/page/components/menu-builder/menu-builder.component.css
@@ -27,16 +27,16 @@ i.icon-move{
   position: absolute;
   top: 10px;
   color: red;
-  display: none;
+  /*display: none;*/
   left: 11px;
   cursor: move;
 }
 
-.menu-image:hover + i.icon-move{
-  display: block;
-}
+/*.menu-image:hover + i.icon-move{*/
+/*  display: block;*/
+/*}*/
 
-i.icon-move:hover{
-  display: block;
-}
+/*i.icon-move:hover{*/
+/*  display: block;*/
+/*}*/
 
