Submenu for context menu

--- a/frontend/src/app/core/modules/file-manager/components/file-manager/file-manager.component.css
+++ b/frontend/src/app/core/modules/file-manager/components/file-manager/file-manager.component.css
@@ -98,6 +98,10 @@ h5 {
   border-width: 0 0 1px;
 }
 
+.manager-body {
+  min-height: 22vw;
+}
+
 .container-fluid {
   border: 1px solid #e0e0e0;
 }
