--- a/frontend/src/app/core/modules/file-manager/components/file-manager-dialog/file-manager-dialog.component.html
+++ b/frontend/src/app/core/modules/file-manager/components/file-manager-dialog/file-manager-dialog.component.html
@@ -1,1 +1,8 @@
-<app-file-manager></app-file-manager>
+<h2 mat-dialog-title>Delete all elements? <i class="material-icons float-right" mat-dialog-close>close</i></h2>
+<div class="row">
+  <div class="col-md-12"><app-file-manager></app-file-manager></div>
+  <div class="col-md-12 text-right">
+    <button (click)="onSelected()" mat-raised-button mat-dialog-close><i class="material-icons">close</i>Zrušit</button>
+    <button class="ml-2" (click)="onSelected()" mat-raised-button color="primary" mat-dialog-close><i class="material-icons">done</i>Vybrat</button>
+  </div>
+</div>
