--- a/frontend/src/app/page/pages/page-create/page-create.component.html
+++ b/frontend/src/app/page/pages/page-create/page-create.component.html
@@ -12,7 +12,7 @@
       <label class="mt-3" for="description">Popis stráky:</label>
       <textarea appFormError type="text" class="form-control" placeholder="Popis stránky" formControlName="description" id="description"></textarea>
       <div class="container-fluid mt-3">
-        <div class="row justify-content-end">
+        <div class="d-flex justify-content-end">
           <a [routerLink]="route.snapshot.url[0].path === 'create' ? ['../list'] : ['../../list']" [replaceUrl]="true" mat-button>Zpět na seznam stránek</a>
           <button type="submit" mat-raised-button color="primary" class="ml-2"><i class="material-icons">add</i>Uložit
           </button>
