--- a/frontend/src/app/layout/components/layout/layout.component.html
+++ b/frontend/src/app/layout/components/layout/layout.component.html
@@ -30,7 +30,7 @@
       <!-- Messages Dropdown Menu -->
       <li class="nav-item dropdown">
         <div class="nav-link">
-            <mat-form-field appearance="legacy">
+            <mat-form-field>
               <mat-select [(value)]="selectedWeb">
                 <mat-option [value]="option.id" *ngFor="let option of websSelect">{{ option.name }}</mat-option>
                 <a [routerLink]="['/admin/web/list']">
