--- a/frontend/src/app/plugin/pages/list-created/list-created.component.html
+++ b/frontend/src/app/plugin/pages/list-created/list-created.component.html
@@ -24,7 +24,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <div class="container-fluid mt-3">
-      <div class="row justify-content-end">
+      <div class="d-flex justify-content-end">
         <button [routerLink]="['../../create', pluginResolver.identifier]" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat plugin
         </button>
       </div>
