--- a/frontend/src/app/web/pages/web-list/web-list.component.html
+++ b/frontend/src/app/web/pages/web-list/web-list.component.html
@@ -29,7 +29,7 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <div class="container-fluid mt-3">
-      <div class="row justify-content-end">
+      <div class="d-flex justify-content-end">
         <button routerLink="../create" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat web
         </button>
       </div>
