--- a/frontend/src/app/plugins/carousel-bootstrap-plugin/pages/effect-admin/effect-admin.component.html
+++ b/frontend/src/app/plugins/carousel-bootstrap-plugin/pages/effect-admin/effect-admin.component.html
@@ -3,7 +3,7 @@
     <mat-checkbox class="example-margin p-2 flex-fill" formControlName="autostart">Autostart</mat-checkbox>
     <mat-form-field class="example-full-width p-2 flex-fill">
       <mat-label>Interval (ms)</mat-label>
-      <input matInput maxlength="5" placeholder="3000" formControlName="interval">
+      <input matInput maxlength="5" placeholder="3000" formControlName="intervalRotate">
     </mat-form-field>
   </div>
 </form>
