--- a/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
+++ b/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
@@ -1,3 +1,1 @@
-<div [sortablejs]="items" [sortablejsOptions]="options">
-  <div *ngFor="let item of items">{{ item }}</div>
-</div>
+<app-menu-admin-item [items]="items" [options]="options"></app-menu-admin-item>
