--- a/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
+++ b/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
@@ -1,1 +1,1 @@
-<app-menu-admin-item [items]="items" [options]="options"></app-menu-admin-item>
+<app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
