--- a/frontend/src/app/plugins/menu-simple-plugin/components/menu-admin-item/menu-admin-item.component.html
+++ b/frontend/src/app/plugins/menu-simple-plugin/components/menu-admin-item/menu-admin-item.component.html
@@ -1,6 +1,7 @@
-<div *ngFor="let item of items">
-  <div class="menu-item level-{{item.level}}">{{item.name}}<i class="material-icons icon-move handle float-right">open_with</i>
-    {{datetime()}}
+<div *ngFor="let item of items; let i = index">
+  <div class="menu-item level-{{item.level}}">{{item.name}}
+    <i class="material-icons icon-move handle float-right">open_with</i>
+    <mat-icon role="button" (click)="remove(items, i)" class="float-right close-icon">delete</mat-icon>
     <div class="empty-item" [sortablejs]="item.children" [sortablejsOptions]=options>
       <app-menu-admin-item *ngIf="item.children.length;" [items]="item.children"
                            [options]="options"></app-menu-admin-item>
