--- a/frontend/src/app/plugins/menu-simple-plugin/components/menu-admin-item/menu-admin-item.component.html
+++ b/frontend/src/app/plugins/menu-simple-plugin/components/menu-admin-item/menu-admin-item.component.html
@@ -2,17 +2,11 @@
   <div class="menu-item level-{{item.level}}">{{item.name}}
     <i class="material-icons icon-move handle float-right">open_with</i>
     <mat-icon role="button" (click)="remove(items, i)" class="float-right close-icon">delete</mat-icon>
+    <mat-icon role="button" (click)="settings(item)" class="float-right">settings</mat-icon>
     <div class="empty-item" [sortablejs]="item.children" [sortablejsOptions]=options>
       <app-menu-admin-item *ngIf="item.children.length;" [items]="item.children"
                            [options]="options"></app-menu-admin-item>
     </div>
   </div>
 </div>
-
-
-<!--<div [sortablejs]="list" [sortablejsOptions]="options">-->
-<!--  <div *ngFor="let item of list" style="width: 500px;background-color: grey">-->
-<!--    <app-app-file [options]="options" [item]="item.list" style="cursor:pointer"></app-app-file>-->
-<!--  </div>-->
-<!--</div>-->
 
