--- a/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
+++ b/frontend/src/app/plugins/menu-simple-plugin/pages/menu-admin/menu-admin.component.html
@@ -1,1 +1,5 @@
 <app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
+<div class="text-right">
+  <button (click)="addMenuItem()" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat položku menu
+  </button>
+</div>
