--- a/frontend/src/app/layout/components/layout/layout.component.css
+++ b/frontend/src/app/layout/components/layout/layout.component.css
@@ -27,3 +27,9 @@
   z-index: 2000 !important;
 }
 
+::ng-deep .mat-mdc-form-field-infix {
+  min-height: auto;
+  padding-top: 3px !important;
+  padding-bottom: 3px !important;
+}
+
