--- a/frontend/src/app/core/components/moveable-modal/moveable-modal.component.css
+++ b/frontend/src/app/core/components/moveable-modal/moveable-modal.component.css
@@ -1,10 +1,10 @@
-:host{
-  position: absolute;
-  width: 50%;
-  z-index: 1;
-  background-color: white;
-  border: 1px solid black;
-}
+/*:host{*/
+/*  position: absolute;*/
+/*  width: 50%;*/
+/*  z-index: 1;*/
+/*  background-color: white;*/
+/*  border: 1px solid black;*/
+/*}*/
 
 .move-line {
   height: 33px;
