--- a/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
+++ b/frontend/src/app/plugins/modules/carousel/carousel-v1/pages/carousel-v1-images-admin/carousel-v1-images-admin.component.html
@@ -13,6 +13,6 @@
     </div>
 </div>
 <div class="text-right">
-  <button (click)="onClickAddImageButton()" mat-raised-button color="primary"><i class="material-icons">photo</i>Přidat obrázek
+  <button (click)="onClickAddImageButton()" mat-raised-button color="primary" class="my-2"><i class="material-icons">photo</i>Přidat obrázek
   </button>
 </div>
