--- a/frontend/src/app/plugins/modules/menu/menu-v1/pages/menu-v1-admin/menu-v1-admin.component.html
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/pages/menu-v1-admin/menu-v1-admin.component.html
@@ -1,5 +1,5 @@
 <app-menu-admin-item [items]="items" [options]="options" [sortablejs]="items" [sortablejsOptions]=options></app-menu-admin-item>
 <div class="text-right">
-  <button (click)="addMenuItem()" mat-raised-button color="primary"><i class="material-icons">add</i>Přidat položku menu
+  <button (click)="addMenuItem()" mat-raised-button color="primary" class="my-2"><i class="material-icons">add</i>Přidat položku menu
   </button>
 </div>
