--- a/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-admin-item/menu-v1-admin-item.component.css
+++ b/frontend/src/app/plugins/modules/menu/menu-v1/components/menu-v1-admin-item/menu-v1-admin-item.component.css
@@ -1,8 +1,12 @@
 .menu-item {
-  padding: 10px 0;
-  padding-left: 1.25rem;;
+  padding: 5px 0.25rem;;
   margin-top: 5px;
   border: 1px solid black;
+}
+
+.item-line {
+  top: 3px;
+  position: relative;
 }
 
 .handle {
