--- a/frontend/src/app/page/pages/page-builder/page-builder.component.css
+++ b/frontend/src/app/page/pages/page-builder/page-builder.component.css
@@ -21,3 +21,7 @@
 ::ng-deep .grid-stack > .grid-stack-item > .ui-resizable-se {
   filter: invert(12%) sepia(86%) saturate(6645%) hue-rotate(1deg) brightness(89%) contrast(104%) !important;
 }
+
+::ng-deep .grid-stack-placeholder {
+  background-color: #e6e6e6;
+}
